Bug 1636665 - Support petabyte in imap folder quote size and percentage calculations. r=mkmelin